--- a/android-grow-up-main/app/src/main/res/layout/activity_song_list.xml
+++ b/android-grow-up-main/app/src/main/res/layout/activity_song_list.xml
@@ -8,11 +8,27 @@
     android:padding="8dp"
     tools:context=".SongListActivity">
 
+    <!-- Adicionar a barra de pesquisa -->
+    <EditText
+        android:id="@+id/searchBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:autofillHints=""
+        android:inputType="text"
+        android:layout_marginBottom="8dp"
+        android:hint="@string/search_hint"
+        android:padding="10dp"
+        android:background="@drawable/search_bar_background"
+        android:drawableStart="@android:drawable/ic_menu_search"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSongList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
