--- a/android-grow-up-main/app/src/main/res/layout/activity_main.xml
+++ b/android-grow-up-main/app/src/main/res/layout/activity_main.xml
@@ -98,8 +98,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/tvSignUp"
+    <Button
+        android:id="@+id/bGoToRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
