--- a/android-grow-up-main/app/src/main/res/layout/activity_main.xml
+++ b/android-grow-up-main/app/src/main/res/layout/activity_main.xml
@@ -110,5 +110,6 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/bLogin"
         app:layout_constraintStart_toStartOf="@id/bLogin"
-        app:layout_constraintEnd_toEndOf="@id/bLogin" />
+        app:layout_constraintEnd_toEndOf="@id/bLogin"
+        android:background="@android:color/transparent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
