--- a/android-grow-up-main/app/src/main/res/layout/activity_register.xml
+++ b/android-grow-up-main/app/src/main/res/layout/activity_register.xml
@@ -82,6 +82,8 @@
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/tilPassword"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/bg_button_register"
+        android:textColor="@color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
